--- a/PasoSeguro/app/src/main/res/layout/activity_signup.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_signup.xml
@@ -68,15 +68,15 @@
         android:text="Edad"
     />
 
-    <Spinner
-        android:layout_width="131dp"
-        android:layout_height="54dp"
-        android:id="@+id/sp_signupAge"
-        android:spinnerMode="dialog"
-        android:scrollIndicators="right"
-        android:padding="5px"
-        android:layoutMode="clipBounds"
-        style="@style/Base.Theme.AppCompat.Light.Dialog.Alert" />
-
+    <EditText
+        android:id="@+id/et_signupAge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registrarse!"
+    />
 
 </LinearLayout>
