--- a/PasoSeguro/app/src/main/res/layout/activity_signup.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_signup.xml
@@ -74,6 +74,7 @@
         android:layout_height="wrap_content"
     />
     <Button
+        android:id="@+id/btn_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Registrarse!"
