--- a/PasoSeguro/app/src/main/res/layout/activity_login.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_login.xml
@@ -11,11 +11,6 @@
     tools:context="com.example.altam.pasoseguro.LoginActivity"
     android:orientation="vertical">
 
-    <!--
-    android:background="#D8C4AC"
-    -->
-
-
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -23,53 +18,54 @@
         android:layout_gravity="center"
         android:layout_marginTop="40dp" />
 
-
-    <EditText
-        android:id="@+id/et_loginUser"
+    <!-- User Label -->
+    <android.support.design.widget.TextInputLayout
         android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
+        android:layout_height="55dp"
         android:layout_marginTop="40dp"
-        android:hint="@string/defaultuser"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:textColor="#000"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/et_loginPass"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:hint="@string/defaultpassword"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#000"
-        android:inputType="textPassword"
-        />
+        android:layout_marginBottom="5dp">
+        <EditText android:id="@+id/et_loginUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/defaultuser"
+            android:textColor="#000"
+            android:inputType="textPersonName" />
+    </android.support.design.widget.TextInputLayout>
 
-    <Button
+    <!-- Password Label -->
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="250dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp">
+        <EditText android:id="@+id/et_loginPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/defaultpassword"
+            android:textColor="#000"
+            android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_loginEnter"
         android:text="@string/button_enter"
         android:layout_height="55dp"
         android:layout_width="250dp"
         android:layout_gravity="center"
         android:textColor="#000"
-        android:textSize="17dp"
+        android:textSize="14dp"
         android:typeface="sans"
-        android:background="@drawable/rounded_button"
-        android:layout_marginTop="20dp"
-        />
+        android:background="#FF4081"
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/registrate"
         android:layout_marginTop="30dp"
-        android:textColor="#000"
+        android:textColor="#424242"
         android:textStyle="normal|bold|italic"
         android:textSize="15dp"
         android:clickable="true"
