--- a/PasoSeguro/app/src/main/res/layout/activity_signup.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_signup.xml
@@ -12,15 +12,13 @@
     android:weightSum="13"
     android:orientation="vertical">
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¡Bienvenido!"
         android:textSize="25dp"
         android:textStyle="normal|bold"
-        android:textColor="#424242"
-        android:layout_weight="1" />
+        android:textColor="#424242"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,116 +26,90 @@
         android:text="Necesitamos algunos de tus datos para registarte a nuestro servicio."
         android:textSize="20dp"
         android:textStyle="normal"
-        android:textColor="#424242"
-        android:layout_weight="1" />
+        android:textColor="#424242"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¿Cómo te gustaría que te llamemos ?"
-        android:textSize="17dp"
-        android:textStyle="normal|bold"
-        android:textColor="#424242"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1" />
-
-    <EditText
-        android:id="@+id/et_signupUser"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:layout_weight="1" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Correo electronico"
-        android:textSize="17dp"
-        android:textStyle="normal|bold"
-        android:textColor="#424242"
+        android:layout_height="55dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="1"/>
+        android:layout_marginBottom="5dp">
+        <EditText android:id="@+id/et_signupUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="¿Cómo te gustaría que te llamemos ?"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/et_signupEmail"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:layout_weight="1"  />
+        android:layout_height="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
+        <EditText android:id="@+id/et_signupEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Correo electrónico"
+            />
+    </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contraseña"
-        android:textSize="17dp"
-        android:textStyle="normal|bold"
-        android:textColor="#424242"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1" />
-
-    <EditText
-        android:id="@+id/et_signupPass"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:layout_weight="1" />
+        android:layout_height="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
+        <EditText android:id="@+id/et_signupPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Contraseña"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Vuelve a ingresar tu contraseña"
-        android:textSize="17dp"
-        android:textStyle="normal|bold"
-        android:textColor="#424242"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1" />
-
-    <EditText
-        android:id="@+id/et_signupPass2"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:layout_weight="1" />
+        android:layout_height="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
+        <EditText android:id="@+id/et_signupPass2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Vuelve a ingresar tu contraseña"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edad"
-        android:textSize="17dp"
-        android:textStyle="normal|bold"
-        android:textColor="#424242"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        />
-
-    <EditText
-        android:id="@+id/et_signupAge"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:paddingLeft="15dp"
-        android:layout_weight="1" />
+        android:layout_height="55dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
+        <EditText android:id="@+id/et_signupAge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Edad"
+            android:textColor="#000" />
+    </android.support.design.widget.TextInputLayout>
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_signup"
+        android:text="CREAR CUENTA"
+        android:layout_height="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#FFF"
-        android:textSize="17dp"
+        android:layout_gravity="center"
+        android:textColor="#000"
+        android:textSize="14dp"
         android:typeface="sans"
-        android:background="@drawable/rounded_button"
-        android:text="Registrarse!"
+        android:background="#FF4081"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/backlogin"
         android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        />
+        android:textColor="#424242"
+        android:textStyle="normal|bold|italic"
+        android:textSize="15dp"
+        android:clickable="true"
+        android:id="@+id/tvBackToLogin"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
