--- a/PasoSeguro/app/src/main/res/layout/activity_map_final.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_map_final.xml
@@ -20,8 +20,9 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+                android:background="@color/colorAccent"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                />
 
             <include
                 android:id="@+id/map"
@@ -47,5 +48,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer"/>
+        app:menu="@menu/drawer"
+       />
 </android.support.v4.widget.DrawerLayout>
