--- a/PasoSeguro/app/src/main/res/layout/activity_signup.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_signup.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -37,7 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="¿Cómo te gustaría que te llamemos ?"
-            android:textColor="#000" />
+            android:textColor="#000"
+            android:inputType="textPersonName"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -49,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Correo electrónico"
+            android:inputType="textPersonName"
             />
     </android.support.design.widget.TextInputLayout>
 
@@ -61,7 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Contraseña"
-            android:textColor="#000" />
+            android:textColor="#000"
+            android:inputType="textPassword"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -73,7 +82,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Vuelve a ingresar tu contraseña"
-            android:textColor="#000" />
+            android:textColor="#000"
+            android:inputType="textPassword"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -85,7 +95,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Edad"
-            android:textColor="#000" />
+            android:textColor="#000"
+            android:inputType="textPersonName"
+            />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
@@ -113,3 +125,4 @@
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
+</ScrollView>
