--- a/PasoSeguro/app/src/main/res/layout/drawer_header.xml
+++ b/PasoSeguro/app/src/main/res/layout/drawer_header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:gravity="bottom">
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@drawable/ic_profile"
+        android:src="@drawable/logo2"
         android:scaleType="fitCenter"
         android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal" />
@@ -20,9 +20,12 @@
         android:id="@+id/drawer_header_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="fsdf"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_gravity="center_horizontal"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"
+        android:textSize="13dp" />
 
 </LinearLayout>
