--- a/PasoSeguro/app/src/main/res/menu/drawer.xml
+++ b/PasoSeguro/app/src/main/res/menu/drawer.xml
@@ -8,7 +8,7 @@
             android:title="@string/nav_item_profile" />
         <item
             android:id="@+id/navigation_item_my_cases"
-            android:icon="@drawable/ic_profile"
+            android:icon="@drawable/ic_mycases"
             android:title="@string/nav_item_my_cases" />
         <item
             android:id="@+id/navigation_item_alarm"
