--- a/PasoSeguro/app/src/main/res/layout/activity_case_map.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_case_map.xml
@@ -1,94 +1,123 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/sv_container">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    tools:context="com.example.altam.pasoseguro.CaseMapActivity"
+    android:orientation="vertical">
 
-
-
-<TextView
-    android:id="@+id/tv_selecciona"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Selecciona un punto en el mapa y continua"/>
-    <EditText
-        android:id="@+id/txtTitle"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Título"
-        android:layout_below="@+id/map"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorAccent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         />
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="250dp"
-    tools:context="com.example.altam.pasoseguro.CaseMapActivity"
-    android:layout_below="@+id/tv_selecciona" />
-
-
-    <ImageView
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:id="@+id/transparent_image"
-        android:layout_below="@+id/tv_selecciona"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@color/transparent_white"
-        android:alpha="0" />
+        android:layout_height="match_parent"
+        android:id="@+id/sv_container">
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
 
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/txtDescripcion"
-        android:hint="descripcion"
-        android:layout_below="@+id/map" />
+        <TextView
+            android:id="@+id/tv_selecciona"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Selecciona un punto en el mapa y continua"
+        />
 
 
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            tools:context="com.example.altam.pasoseguro.CaseMapActivity"
+            android:layout_below="@+id/tv_selecciona" />
 
-    <CheckBox
-        android:id="@+id/checkPiropos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Piropos"
-        android:layout_below="@+id/txtDescripcion"/>
-    <CheckBox
-        android:id="@+id/checkContacto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contacto"
-        android:layout_below="@+id/checkPiropos"/>
-    <CheckBox
-        android:id="@+id/checkSilbidos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Silbidos"
-        android:layout_below="@+id/checkContacto"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:id="@+id/transparent_image"
+                android:layout_below="@+id/tv_selecciona"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:src="@color/transparent_white"
+                android:alpha="0" />
 
-    <CheckBox
-        android:id="@+id/checkMiradas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Miradas"
-        android:layout_below="@+id/checkSilbidos"/>
-    <Button
-        android:id="@+id/btnGuardar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Guardar"
-        android:layout_below="@+id/checkMiradas"/>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:id="@+id/inputTitle"
+                android:layout_below="@+id/map">
+                <EditText android:id="@+id/txtTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Titulo"/>
+            </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/inputDescription"
+                android:layout_height="75dp"
+                android:layout_below="@+id/inputTitle">
+                <EditText android:id="@+id/txtDescripcion"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:hint="Descripcion"
+                    />
+            </android.support.design.widget.TextInputLayout>
 
-</RelativeLayout>
-</ScrollView>
+            <CheckBox
+                android:id="@+id/checkPiropos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Piropos"
+                android:layout_below="@+id/inputDescription"/>
+            <CheckBox
+                android:id="@+id/checkContacto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contacto"
+                android:layout_below="@+id/checkPiropos"/>
+            <CheckBox
+                android:id="@+id/checkSilbidos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Silbidos"
+                android:layout_below="@+id/checkContacto"/>
+
+            <CheckBox
+                android:id="@+id/checkMiradas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Miradas"
+                android:layout_below="@+id/checkSilbidos"/>
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btnGuardar"
+                android:text="Guardar"
+                android:layout_height="40dp"
+                android:layout_width="match_parent"
+                android:layout_marginTop="5dp"
+                android:textColor="#000"
+                android:textSize="14dp"
+                android:typeface="sans"
+                android:background="#FF4081"
+                android:layout_below="@+id/checkMiradas"
+                />
+
+        </RelativeLayout>
+    </ScrollView>
+
+</LinearLayout>
