--- a/PasoSeguro/app/src/main/res/layout/activity_custom_filter.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_custom_filter.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -93,7 +99,7 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_siguiente"
-            android:text="Siguiente"
+            android:text="Filtrar"
             android:layout_height="40dp"
             android:layout_width="match_parent"
             android:layout_marginTop="15dp"
@@ -105,3 +111,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
