Danger zones, custom filter

--- a/PasoSeguro/app/src/main/res/menu/menu_main.xml
+++ b/PasoSeguro/app/src/main/res/menu/menu_main.xml
@@ -29,6 +29,9 @@
                 <item
                     android:id="@+id/fast_filter_item_anio"
                     android:title="@string/fast_filter_item_anio" />
+                <item
+                    android:id="@+id/fast_filter_item_custom"
+                    android:title="@string/fast_filter_item_custom" />
             </group>
         </menu>
     </item>
