--- a/PasoSeguro/app/src/main/res/layout/activity_my_profile.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_my_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,31 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.altam.pasoseguro.MyProfileActivity">
+    tools:context="com.example.altam.pasoseguro.MyProfileActivity"
+    android:orientation="vertical">
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/txt_profileUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="usuario"/>
+
+    <TextView
+        android:id="@+id/txt_profilePass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="clave"/>
+
+    <TextView
+        android:id="@+id/txt_profileAge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="edad"/>
+
+    <TextView
+        android:id="@+id/txt_profileEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="correo"/>
+
+</LinearLayout>
