--- a/PasoSeguro/app/src/main/res/layout/activity_my_profile.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_my_profile.xml
@@ -3,40 +3,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.altam.pasoseguro.MyProfileActivity"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/txt_profileUser"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="usuario"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorAccent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        />
 
-    <EditText
-        android:id="@+id/txt_profilePass"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="clave"/>
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/txt_profileAge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="edad"/>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp">
+            <EditText android:id="@+id/txt_profileUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Usuario"
+                android:textColor="#000"
+                android:inputType="textPersonName"/>
+        </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/txt_profileEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="correo"/>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp">
+            <EditText android:id="@+id/txt_profilePass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Clave"
+                android:textColor="#000"
+                android:inputType="textPersonName"/>
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/btn_profileUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Actualizar"/>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp">
+            <EditText android:id="@+id/txt_profileAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Edad"
+                android:textColor="#000"
+                android:inputType="textPersonName"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp">
+            <EditText android:id="@+id/txt_profileEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Edad"
+                android:textColor="#000"
+                android:inputType="textPersonName"/>
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_profileUpdate"
+            android:text="Actualizar"
+            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:textColor="#000"
+            android:textSize="14dp"
+            android:typeface="sans"
+            android:background="#FF4081"
+            android:layout_marginTop="20dp"/>
+
+    </LinearLayout>
+
+
+
 </LinearLayout>
