--- a/PasoSeguro/app/src/main/res/layout/activity_my_profile.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_my_profile.xml
@@ -70,7 +70,7 @@
             <EditText android:id="@+id/txt_profileEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Edad"
+                android:hint="Correo electronico"
                 android:textColor="#000"
                 android:inputType="textPersonName"/>
         </android.support.design.widget.TextInputLayout>
@@ -81,12 +81,11 @@
             android:text="Actualizar"
             android:layout_height="50dp"
             android:layout_width="match_parent"
-            android:layout_gravity="center"
             android:textColor="#000"
             android:textSize="14dp"
             android:typeface="sans"
             android:background="#FF4081"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="80dp"/>
 
     </LinearLayout>
 
