--- a/PasoSeguro/app/src/main/res/layout/activity_my_cases_final.xml
+++ b/PasoSeguro/app/src/main/res/layout/activity_my_cases_final.xml
@@ -40,6 +40,17 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:src="@drawable/ic_minus" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/totalCases"
+            android:layout_alignBottom="@+id/fab"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="34dp"
+            android:layout_marginStart="34dp" />
+
     </RelativeLayout>
 
 
