--- a/PasoSeguro/app/src/main/res/layout/drawer_header.xml
+++ b/PasoSeguro/app/src/main/res/layout/drawer_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="170dp"
     android:background="@color/colorPrimary"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
@@ -14,7 +14,8 @@
         android:src="@drawable/logo2"
         android:scaleType="fitCenter"
         android:layout_centerInParent="true"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/drawer_header_textview"
